[package]
name = "sandoseer"
version = "0.1.0"
edition = "2021"
description = "AI MEV Oracle for Solana - detects and exploits MEV opportunities"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

# Solana dependencies
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"

# Listen integration
listen-core = { path = "./listen-core" }

# Utility libraries
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
shellexpand = "3.1"

[[bin]]
name = "sandoseer"
path = "src/main.rs"