[package]
name = "listen-core"
version = "0.1.0"
edition = "2021"
description = "Core components from the listen project for Solana DEX transaction monitoring and routing"
license = "MIT"

[dependencies]
# Solana dependencies
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
async-trait = "0.1"
base64 = "0.21"
bincode = "1.3"
bs58 = "0.5"
chrono = "0.4"

# Websocket dependencies
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
